operator/pkg/controllers/hubofhubs/manifests/manager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.open-cluster-management.io/auth-type: access-token
    ingress.open-cluster-management.io/secure-backends: "true"
    kubernetes.io/ingress.class: ingress-open-cluster-management
  name: multicluster-global-hub-manager
  namespace: open-cluster-management
  labels:
    name: multicluster-global-hub-manager
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: multicluster-global-hub-manager
            port:
              number: 8080
        path: /multicloud/hub-of-hubs-nonk8s-api
        pathType: ImplementationSpecific
